.vscode/uv4.log
*** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
Build target 'App'
src/Application/gd32f30x_it.c(142): error: call to undeclared function 'led_spark'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  142 |     led_spark();
      |     ^
1 error generated.
compiling gd32f30x_it.c...
compiling gd32f30x_crc.c...
compiling systick.c...
compiling gd32f30x_bkp.c...
compiling system_gd32f30x.c...
compiling gd32f30x_adc.c...
compiling gd32f30x_can.c...
compiling gd32f30x_dbg.c...
compiling gd32f30x_ctc.c...
compiling gd32f30x_enet.c...
compiling gd32f30x_dac.c...
compiling gd32f30x_dma.c...
compiling gd32f30x_exmc.c...
compiling gd32f30x_exti.c...
compiling gd32f30x_fwdgt.c...
compiling gd32f30x_gpio.c...
compiling gd32f30x_i2c.c...
compiling gd32f30x_misc.c...
compiling gd32f30x_fmc.c...
compiling gd32f30x_pmu.c...
compiling gd32f30x_rcu.c...
compiling gd32f30x_rtc.c...
compiling gd32f30x_sdio.c...
compiling gd32f30x_spi.c...
compiling gd32f30x_wwdgt.c...
compiling gd32f30x_usart.c...
compiling gd32f30x_timer.c...
".\build\Objects\gd32f303.axf" - 1 Error(s), 0 Warning(s).
Target not created.
Build Time Elapsed:  00:00:02
